# playground-pypi

./: README.md  flake.nix
.github/actions/fetch-pypi-oidc-token/: action.yml
.github/workflows/: 01-use-twine-in-each-directory.yml  02-use-twine-in-single-directory.yml  03-use-twine-in-matrix.yml  04-use-action-in-each-directory.yml  05-use-action-in-single-directory.yml  06-use-action-in-matrix.yml
01-use-twine-in-each-directory/playground-pypi-package-a/: pyproject.toml
01-use-twine-in-each-directory/playground-pypi-package-b/: pyproject.toml
01-use-twine-in-each-directory/playground-pypi-package-b/playground_pypi_package_b/: __init__.py
02-use-twine-in-single-directory/playground-pypi-package-c/: pyproject.toml
02-use-twine-in-single-directory/playground-pypi-package-d/: pyproject.toml
03-use-twine-in-matrix/playground-pypi-package-e/: pyproject.toml
03-use-twine-in-matrix/playground-pypi-package-f/: pyproject.toml
04-use-action-in-each-directory/playground-pypi-package-g/: pyproject.toml
04-use-action-in-each-directory/playground-pypi-package-h/: pyproject.toml
05-use-action-in-single-directory/playground-pypi-package-i/: pyproject.toml
05-use-action-in-single-directory/playground-pypi-package-j/: pyproject.toml
06-use-action-in-matrix/playground-pypi-package-k/: pyproject.toml
06-use-action-in-matrix/playground-pypi-package-k/playground_pypi_package_k/: __init__.py
06-use-action-in-matrix/playground-pypi-package-l/: pyproject.toml
06-use-action-in-matrix/playground-pypi-package-ll/: pyproject.toml
(+11 files in other folders)
