[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "playground-pypi-package-b"
version = "0.1.0"
description = "A playground for uploading Python packages to PyPI"
authors = [
    { name="Subin Kim", email="sudosubin@gmail.com" }
]
license = "MIT"
dependencies = []
